// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSteps renders step title inside "headingElement" element 1`] = `
<div
  aria-label="aria-label"
  class="ouiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiStep"
  >
    <div
      class="ouiStep__titleWrapper"
    >
      <span
        class="ouiStepNumber ouiStep__circle"
      >
        <span
          class="ouiScreenReaderOnly"
        >
          Step 1
        </span>
        <span
          aria-hidden="true"
          class="ouiStepNumber__number"
        >
          1
        </span>
      </span>
      <h2
        class="ouiTitle ouiTitle--small ouiStep__title"
      >
        first title
      </h2>
    </div>
    <div
      class="ouiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="ouiStep"
  >
    <div
      class="ouiStep__titleWrapper"
    >
      <span
        class="ouiStepNumber ouiStep__circle"
      >
        <span
          class="ouiScreenReaderOnly"
        >
          Step 2
        </span>
        <span
          aria-hidden="true"
          class="ouiStepNumber__number"
        >
          2
        </span>
      </span>
      <h2
        class="ouiTitle ouiTitle--small ouiStep__title"
      >
        second title
      </h2>
    </div>
    <div
      class="ouiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="ouiStep"
  >
    <div
      class="ouiStep__titleWrapper"
    >
      <span
        class="ouiStepNumber ouiStepNumber--incomplete ouiStepNumber-isHollow ouiStep__circle"
      >
        <span
          class="ouiScreenReaderOnly"
        >
          Step 3 is incomplete
        </span>
        <span
          aria-hidden="true"
          class="ouiStepNumber__number"
        >
          3
        </span>
      </span>
      <h2
        class="ouiTitle ouiTitle--small ouiStep__title"
      >
        third title
      </h2>
    </div>
    <div
      class="ouiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`OuiSteps renders steps 1`] = `
<div
  aria-label="aria-label"
  class="ouiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiStep"
  >
    <div
      class="ouiStep__titleWrapper"
    >
      <span
        class="ouiStepNumber ouiStep__circle"
      >
        <span
          class="ouiScreenReaderOnly"
        >
          Step 1
        </span>
        <span
          aria-hidden="true"
          class="ouiStepNumber__number"
        >
          1
        </span>
      </span>
      <p
        class="ouiTitle ouiTitle--small ouiStep__title"
      >
        first title
      </p>
    </div>
    <div
      class="ouiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="ouiStep"
  >
    <div
      class="ouiStep__titleWrapper"
    >
      <span
        class="ouiStepNumber ouiStep__circle"
      >
        <span
          class="ouiScreenReaderOnly"
        >
          Step 2
        </span>
        <span
          aria-hidden="true"
          class="ouiStepNumber__number"
        >
          2
        </span>
      </span>
      <p
        class="ouiTitle ouiTitle--small ouiStep__title"
      >
        second title
      </p>
    </div>
    <div
      class="ouiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="ouiStep"
  >
    <div
      class="ouiStep__titleWrapper"
    >
      <span
        class="ouiStepNumber ouiStepNumber--incomplete ouiStepNumber-isHollow ouiStep__circle"
      >
        <span
          class="ouiScreenReaderOnly"
        >
          Step 3 is incomplete
        </span>
        <span
          aria-hidden="true"
          class="ouiStepNumber__number"
        >
          3
        </span>
      </span>
      <p
        class="ouiTitle ouiTitle--small ouiStep__title"
      >
        third title
      </p>
    </div>
    <div
      class="ouiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`OuiSteps renders steps with firstStepNumber 1`] = `
<div
  aria-label="aria-label"
  class="ouiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiStep"
  >
    <div
      class="ouiStep__titleWrapper"
    >
      <span
        class="ouiStepNumber ouiStep__circle"
      >
        <span
          class="ouiScreenReaderOnly"
        >
          Step 10
        </span>
        <span
          aria-hidden="true"
          class="ouiStepNumber__number"
        >
          10
        </span>
      </span>
      <p
        class="ouiTitle ouiTitle--small ouiStep__title"
      >
        first title
      </p>
    </div>
    <div
      class="ouiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="ouiStep"
  >
    <div
      class="ouiStep__titleWrapper"
    >
      <span
        class="ouiStepNumber ouiStep__circle"
      >
        <span
          class="ouiScreenReaderOnly"
        >
          Step 11
        </span>
        <span
          aria-hidden="true"
          class="ouiStepNumber__number"
        >
          11
        </span>
      </span>
      <p
        class="ouiTitle ouiTitle--small ouiStep__title"
      >
        second title
      </p>
    </div>
    <div
      class="ouiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="ouiStep"
  >
    <div
      class="ouiStep__titleWrapper"
    >
      <span
        class="ouiStepNumber ouiStepNumber--incomplete ouiStepNumber-isHollow ouiStep__circle"
      >
        <span
          class="ouiScreenReaderOnly"
        >
          Step 12 is incomplete
        </span>
        <span
          aria-hidden="true"
          class="ouiStepNumber__number"
        >
          12
        </span>
      </span>
      <p
        class="ouiTitle ouiTitle--small ouiStep__title"
      >
        third title
      </p>
    </div>
    <div
      class="ouiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`OuiSteps renders steps with titleSize 1`] = `
<div
  aria-label="aria-label"
  class="ouiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiStep ouiStep--small"
  >
    <div
      class="ouiStep__titleWrapper"
    >
      <span
        class="ouiStepNumber ouiStep__circle ouiStepNumber--small"
      >
        <span
          class="ouiScreenReaderOnly"
        >
          Step 1
        </span>
        <span
          aria-hidden="true"
          class="ouiStepNumber__number"
        >
          1
        </span>
      </span>
      <p
        class="ouiTitle ouiTitle--xsmall ouiStep__title"
      >
        first title
      </p>
    </div>
    <div
      class="ouiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="ouiStep ouiStep--small"
  >
    <div
      class="ouiStep__titleWrapper"
    >
      <span
        class="ouiStepNumber ouiStep__circle ouiStepNumber--small"
      >
        <span
          class="ouiScreenReaderOnly"
        >
          Step 2
        </span>
        <span
          aria-hidden="true"
          class="ouiStepNumber__number"
        >
          2
        </span>
      </span>
      <p
        class="ouiTitle ouiTitle--xsmall ouiStep__title"
      >
        second title
      </p>
    </div>
    <div
      class="ouiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="ouiStep ouiStep--small"
  >
    <div
      class="ouiStep__titleWrapper"
    >
      <span
        class="ouiStepNumber ouiStepNumber--incomplete ouiStepNumber-isHollow ouiStep__circle ouiStepNumber--small"
      >
        <span
          class="ouiScreenReaderOnly"
        >
          Step 3 is incomplete
        </span>
        <span
          aria-hidden="true"
          class="ouiStepNumber__number"
        >
          3
        </span>
      </span>
      <p
        class="ouiTitle ouiTitle--xsmall ouiStep__title"
      >
        third title
      </p>
    </div>
    <div
      class="ouiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;
